--- a/index.html
+++ b/index.html
@@ -4,9 +4,239 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Notify</title>
+	<link rel="icon" href="img/icon.png" type="image/png">
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-7">
+					<div class="offer">
+						<img src="img/notify.png" alt="" class="offer__logo">
+						<p class="offer__intro">A great new free psd theme to showcase your new application. </p>
+						<ul class="offer__links">
+							<li class="offer__links-item offer__links-item_apple">
+								<a href="https://www.apple.com/" target="_blank"></a>
+							</li>
+							<li class="offer__links-item offer__links-item_android">
+								<a href="https://www.android.com/" target="_blank"></a>
+							</li>
+							<li class="offer__links-item offer__links-item_windows">
+								<a href="https://www.microsoft.com/" target="_blank"></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-5">
+					<img src="img/iphone.png" class="iphone" alt="">
+				</div>
+			</div>
+		</div>
+	</header>
+	<section id="triggers">
+		<div class="container">
+			<div class="row">
+				 <div class="col">
+					<div class="trigger">
+						<div class="trigger__icon trigger__icon_theme"></div>
+						<h3 class="trigger__title">Editable Theme</h3>
+						<p class="triiger__text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+						</p>
+					</div>
+			</div>
+				<div class="col">
+					<div class="trigger">
+						<div class="trigger__icon trigger__icon_flat"></div>
+						<h3 class="trigger__title">Flat Design</h3>
+						<p class="triiger__text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+						</p>
+					</div>
+				</div>
+				<div class="col">
+					<div class="trigger">
+						<div class="trigger__icon trigger__icon_audience"></div>
+						<h3 class="trigger__title">Reach Your Audience</h3>
+						<p class="triiger__text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="subscribe">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-7">
+					<div class="subscribe">
+						<h3 class="subscribe__title">
+							Get Notified Of Any Updates!
+						</h3>
+						<p class="subscribe__text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla nisl congue congue. Maecenas nec condimentum libero, at elementum mauris. Phasellus eget nisi dapibus, ultricies nisl at, hendrerit risusuis ornare luctus id sollicitudin ante lobortis at.
+						</p>
+						<form action="#" class="subscribe__form">
+							<input type="email" class="email" placeholder="Email Address" >
+							<button type="submit" class="submit">
+								Notify
+							</button>
+						</form>
+					</div>
+				</div>
+				<div class="col-md-5">
+					<iframe class="video" src="https://player.vimeo.com/video/146463900?color=a2ffd9&title=0&byline=0&portrait=0" width="100%" allow="autoplay; fullscreen" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="people">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="quote">
+						<p class="quote__text">
+							“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum varius eleifend ut.”
+						</p>
+						<h3>Jane Hunt</h3>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="faces">
+					<a href="#" class="faces__link">
+						<img src="img/1.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/2.jpg" alt="face" >
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/3.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/4.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/5.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/6.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/7.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/8.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/9.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/10.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/11.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/12.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/13.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/14.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/15.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/16.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/17.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/18.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/19.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/20.jpg" alt="face">
+					</a>
+					<a href="#" class="faces__link">
+						<img src="img/21.jpg" alt="face">
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div class="contact">
+						<h2 class="contact__title">
+							Say Hi & Get in Touch
+						</h2>
+						<p class="contact__text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse.
+						</p>
+						<ul class="social__links">
+							<li class="social__links-item social__links-item_twitter">
+								<a href="https://twitter.com/" target="_blank"></a>
+							</li>
+							<li class="social__links-item social__links-item_facebook">
+								<a href="https://www.facebook.com/" target="_blank"></a>
+							</li>
+							<li class="social__links-item social__links-item_pinterest">
+								<a href="https://pinterest.com/" target="_blank"></a>
+							</li>
+							<li class="social__links-item social__links-item_google">
+								<a href="https://www.google.com/" target="_blank"></a>
+							</li>
+							<li class="social__links-item social__links-item_linkedin">
+								<a href="https://www.linkedin.com/" target="_blank"></a>
+							</li>
+							<li class="social__links-item social__links-item_youtube">
+								<a href="https://www.youtube.com/" target="_blank"></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<nav>             
+						<ul class="menu">
+							<li class="menu__item">
+								<a href="#" class="menu__link">Contact</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Download</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Press</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Email</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Support</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Privacy Policy</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
